--- a/style.css
+++ b/style.css
@@ -6,19 +6,19 @@
 
 @font-face {
   font-family: Montserrat-ExtraBold;
-  src: url(../fonts/Montserrat-ExtraBold.ttf);
+  src: url(fonts/Montserrat-ExtraBold.ttf);
 }
 @font-face {
   font-family: Montserrat-Bold;
-  src: url(../fonts/Montserrat-Bold.ttf);
+  src: url(fonts/Montserrat-Bold.ttf);
 }
 @font-face {
   font-family: Montserrat-Medium;
-  src: url(../fonts/Montserrat-Medium.ttf);
+  src: url(fonts/Montserrat-Medium.ttf);
 }
 @font-face {
   font-family: Montserrat-Regular;
-  src: url(../fonts/Montserrat-Regular.ttf);
+  src: url(fonts/Montserrat-Regular.ttf);
 }
 
 .wrapper {
@@ -893,4 +893,5 @@
     padding: 16px;
     text-align: center;
   }
+
 }
