--- a/style.css
+++ b/style.css
@@ -846,6 +846,7 @@
   .location__info {
     width: 100%;
     max-width: 100%;
+    margin-left: 25px;
   }
 
   .location__title {
@@ -895,4 +896,5 @@
   }
 
 }
+
 
